quick fix for mobile txt spacing

--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -67,7 +67,7 @@ body {
     }
 
     .text {
-        margin-top: 20px;
+        margin-top: 180px;
         margin-right: 10px;
         margin-left: 10px;
         margin-bottom: 30px;
